--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -5,24 +5,34 @@
     --dark-hl-1: #D4D4D4;
     --light-hl-2: #A31515;
     --dark-hl-2: #CE9178;
-    --light-hl-3: #0000FF;
-    --dark-hl-3: #569CD6;
-    --light-hl-4: #0070C1;
-    --dark-hl-4: #4FC1FF;
-    --light-hl-5: #008000;
-    --dark-hl-5: #6A9955;
-    --light-hl-6: #001080;
+    --light-hl-3: #800000;
+    --dark-hl-3: #808080;
+    --light-hl-4: #800000;
+    --dark-hl-4: #569CD6;
+    --light-hl-5: #000000FF;
+    --dark-hl-5: #D4D4D4;
+    --light-hl-6: #E50000;
     --dark-hl-6: #9CDCFE;
-    --light-hl-7: #811F3F;
-    --dark-hl-7: #D16969;
-    --light-hl-8: #000000;
-    --dark-hl-8: #D7BA7D;
-    --light-hl-9: #EE0000;
-    --dark-hl-9: #DCDCAA;
-    --light-hl-10: #098658;
-    --dark-hl-10: #B5CEA8;
-    --light-hl-11: #AF00DB;
-    --dark-hl-11: #C586C0;
+    --light-hl-7: #0000FF;
+    --dark-hl-7: #CE9178;
+    --light-hl-8: #0000FF;
+    --dark-hl-8: #569CD6;
+    --light-hl-9: #0070C1;
+    --dark-hl-9: #4FC1FF;
+    --light-hl-10: #008000;
+    --dark-hl-10: #6A9955;
+    --light-hl-11: #001080;
+    --dark-hl-11: #9CDCFE;
+    --light-hl-12: #811F3F;
+    --dark-hl-12: #D16969;
+    --light-hl-13: #000000;
+    --dark-hl-13: #D7BA7D;
+    --light-hl-14: #EE0000;
+    --dark-hl-14: #DCDCAA;
+    --light-hl-15: #AF00DB;
+    --dark-hl-15: #C586C0;
+    --light-hl-16: #098658;
+    --dark-hl-16: #B5CEA8;
     --light-code-background: #FFFFFF;
     --dark-code-background: #1E1E1E;
 }
@@ -40,6 +50,11 @@
     --hl-9: var(--light-hl-9);
     --hl-10: var(--light-hl-10);
     --hl-11: var(--light-hl-11);
+    --hl-12: var(--light-hl-12);
+    --hl-13: var(--light-hl-13);
+    --hl-14: var(--light-hl-14);
+    --hl-15: var(--light-hl-15);
+    --hl-16: var(--light-hl-16);
     --code-background: var(--light-code-background);
 } }
 
@@ -56,6 +71,11 @@
     --hl-9: var(--dark-hl-9);
     --hl-10: var(--dark-hl-10);
     --hl-11: var(--dark-hl-11);
+    --hl-12: var(--dark-hl-12);
+    --hl-13: var(--dark-hl-13);
+    --hl-14: var(--dark-hl-14);
+    --hl-15: var(--dark-hl-15);
+    --hl-16: var(--dark-hl-16);
     --code-background: var(--dark-code-background);
 } }
 
@@ -72,6 +92,11 @@
     --hl-9: var(--light-hl-9);
     --hl-10: var(--light-hl-10);
     --hl-11: var(--light-hl-11);
+    --hl-12: var(--light-hl-12);
+    --hl-13: var(--light-hl-13);
+    --hl-14: var(--light-hl-14);
+    --hl-15: var(--light-hl-15);
+    --hl-16: var(--light-hl-16);
     --code-background: var(--light-code-background);
 }
 
@@ -88,6 +113,11 @@
     --hl-9: var(--dark-hl-9);
     --hl-10: var(--dark-hl-10);
     --hl-11: var(--dark-hl-11);
+    --hl-12: var(--dark-hl-12);
+    --hl-13: var(--dark-hl-13);
+    --hl-14: var(--dark-hl-14);
+    --hl-15: var(--dark-hl-15);
+    --hl-16: var(--dark-hl-16);
     --code-background: var(--dark-code-background);
 }
 
@@ -103,4 +133,9 @@
 .hl-9 { color: var(--hl-9); }
 .hl-10 { color: var(--hl-10); }
 .hl-11 { color: var(--hl-11); }
+.hl-12 { color: var(--hl-12); }
+.hl-13 { color: var(--hl-13); }
+.hl-14 { color: var(--hl-14); }
+.hl-15 { color: var(--hl-15); }
+.hl-16 { color: var(--hl-16); }
 pre, code { background: var(--code-background); }
